# django-jsonapi-project-template

./: .dockerignore  .gitignore  README.md
django_project/: .flake8  README.md  pyproject.toml
django_project/apps/core/app_template_multi_model/: apps.py-tpl  constants.py-tpl  utils.py-tpl
django_project/apps/core/app_template_single_model/: constants.py-tpl  factories.py-tpl  filters.py-tpl  permissions.py-tpl  views.py-tpl
django_project/apps/users/: admin.py  managers.py  serializers.py  tests.py
django_project/apps/users/migrations/: 0001_initial.py
django_project/django_project/: settings.py
docker/: compose.development.yaml  django-development.Dockerfile
docker/files/: gunicorn.conf.py
