[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "A dockerized Django project for rest APIs following the JSONAPI standard"
authors = ["Alex <alessandro.pravato@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
django-filter = "^24.2"
markdown = "^3.6"
djangorestframework = "^3.15.1"
djangorestframework-jsonapi = {extras = ["django-filter"], version = "^6.1.0"}
environ = "^1.0"
django-storages = {extras = ["sftp"], version = "^1.14.2"}
django-cors-headers = "^4.3.1"
pandas = "^2.2.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
factory-boy = "^3.3.0"
flake8 = "^7.0.0"
gunicorn = {extras = ["eventlet"], version = "^21.2.0"}
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
